[gd_scene load_steps=35 format=2]

[ext_resource path="res://assets/fonts/Open_Sans/OpenSans-SemiBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Center_ToD.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/X_Button_hovered.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/Video_Button_hovered.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/outer_Rec.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/DisLike_Button.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/Close_Button_pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/Blog_Button_hovered.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/Video_Button.png" type="Texture" id=9]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/Prev_Next_Button_pressed.png" type="Texture" id=10]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/Close_Button_hovered.png" type="Texture" id=11]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/Video_Button_pressed.png" type="Texture" id=12]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/Prev_Next_Button_hovered.png" type="Texture" id=13]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/Blog_Button_pressed.png" type="Texture" id=14]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/Like_Button.png" type="Texture" id=15]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/Blog_Button.png" type="Texture" id=16]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/X_Button.png" type="Texture" id=17]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/DisLike_Button_hovered.png" type="Texture" id=18]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/Like_Button_hovered.png" type="Texture" id=19]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/Upload_Button.png" type="Texture" id=20]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/DisLike_Button_pressed.png" type="Texture" id=21]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/Upload_Button_pressed.png" type="Texture" id=22]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/Upload_Button_hovered.png" type="Texture" id=23]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/Close_Button.png" type="Texture" id=24]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/Prev_Next_Button.png" type="Texture" id=25]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/X_Button_pressed.png" type="Texture" id=26]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/Like_Button_pressed.png" type="Texture" id=27]
[ext_resource path="res://assets/textures/Crowdbased_Tip_of_the_Day/inner_Rec.png" type="Texture" id=28]
[ext_resource path="res://assets/fonts/Dynamic_Font/Crowdbased_ToD/ToD_Body_Text.tres" type="DynamicFont" id=29]
[ext_resource path="res://assets/fonts/Dynamic_Font/Crowdbased_ToD/ToD-Button.tres" type="DynamicFont" id=30]
[ext_resource path="res://assets/fonts/Dynamic_Font/Crowdbased_ToD/ToD_Title-Text.tres" type="DynamicFont" id=31]

[sub_resource type="StyleBoxLine" id=1]
color = Color( 0.862745, 0.862745, 0.862745, 1 )
thickness = 2

[sub_resource type="DynamicFont" id=2]
size = 28
outline_color = Color( 0.862745, 0.862745, 0.862745, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 28
outline_color = Color( 0.862745, 0.862745, 0.862745, 1 )
font_data = ExtResource( 1 )

[node name="ToD" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -0.00012207
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Root" type="Control" parent="."]
margin_left = 960.0
margin_top = 539.0
margin_right = 960.0
margin_bottom = 539.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Outer_Rect" type="NinePatchRect" parent="Root"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -518.5
margin_top = -292.5
margin_right = 518.5
margin_bottom = 292.5
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top_C" type="CenterContainer" parent="Root/Outer_Rect"]
margin_right = 1036.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToD_L" type="Label" parent="Root/Outer_Rect/Top_C"]
margin_left = 354.0
margin_top = 7.0
margin_right = 682.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 30 )
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Community Tip of the Day"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X_M" type="MarginContainer" parent="Root/Outer_Rect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -50.0
margin_bottom = 50.0
custom_constants/margin_top = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X_Button" type="TextureButton" parent="Root/Outer_Rect/X_M"]
margin_top = 14.0
margin_right = 50.0
margin_bottom = 50.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 26 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inner_Rect" type="NinePatchRect" parent="Root/Outer_Rect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -492.5
margin_top = -241.5
margin_right = 498.5
margin_bottom = 268.5
texture = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inner_M" type="MarginContainer" parent="Root/Outer_Rect/Inner_Rect"]
margin_right = 991.0
margin_bottom = 508.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body_C" type="VBoxContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M"]
margin_left = 5.0
margin_top = 5.0
margin_right = 986.0
margin_bottom = 503.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title_C" type="CenterContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C"]
margin_right = 981.0
margin_bottom = 45.0

[node name="Title" type="Label" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Title_C"]
margin_left = 208.0
margin_right = 773.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 31 )
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "<Default Title of your Tip of the Day>"

[node name="Seperator_M" type="MarginContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C"]
margin_top = 49.0
margin_right = 981.0
margin_bottom = 53.0
custom_constants/margin_right = 40
custom_constants/margin_left = 40

[node name="Title_Line" type="HSeparator" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Seperator_M"]
margin_left = 40.0
margin_right = 941.0
margin_bottom = 4.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text_C" type="HBoxContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C"]
margin_top = 57.0
margin_right = 981.0
margin_bottom = 368.0

[node name="Button_M" type="MarginContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Text_C"]
margin_right = 224.0
margin_bottom = 311.0
custom_constants/margin_right = 50
custom_constants/margin_left = 80

[node name="Button_C" type="VBoxContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Text_C/Button_M"]
margin_left = 80.0
margin_right = 174.0
margin_bottom = 311.0

[node name="Block_M" type="MarginContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Text_C/Button_M/Button_C"]
margin_right = 94.0
margin_bottom = 163.0
custom_constants/margin_top = 40
custom_constants/margin_bottom = 30

[node name="Block_Button" type="TextureButton" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Text_C/Button_M/Button_C/Block_M"]
margin_top = 40.0
margin_right = 94.0
margin_bottom = 133.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 8 )

[node name="Video_M" type="MarginContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Text_C/Button_M/Button_C"]
margin_top = 167.0
margin_right = 94.0
margin_bottom = 311.0
custom_constants/margin_top = 30
custom_constants/margin_bottom = 50

[node name="Video_Button" type="TextureButton" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Text_C/Button_M/Button_C/Video_M"]
margin_top = 30.0
margin_right = 94.0
margin_bottom = 94.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 4 )

[node name="ScrollContainer" type="ScrollContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Text_C"]
margin_left = 228.0
margin_right = 981.0
margin_bottom = 311.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Text_M" type="MarginContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Text_C/ScrollContainer"]
margin_right = 741.0
margin_bottom = 624.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 15

[node name="Text" type="Label" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Text_C/ScrollContainer/Text_M"]
margin_top = 15.0
margin_right = 741.0
margin_bottom = 624.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 29 )
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "<More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. >

<More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. >

<More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. >
<More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. More Default Text. >"
autowrap = true

[node name="Down_M" type="MarginContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C"]
margin_top = 372.0
margin_right = 981.0
margin_bottom = 487.0
size_flags_horizontal = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 30
custom_constants/margin_left = 20
custom_constants/margin_bottom = 30

[node name="Down_C" type="HBoxContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M"]
margin_left = 20.0
margin_top = 30.0
margin_right = 961.0
margin_bottom = 85.0

[node name="Prev_Next_M" type="MarginContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C"]
margin_right = 284.0
margin_bottom = 55.0
custom_constants/margin_right = 20

[node name="Prev_Next_C" type="HBoxContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Prev_Next_M"]
margin_right = 264.0
margin_bottom = 55.0

[node name="Prev_M" type="MarginContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Prev_Next_M/Prev_Next_C"]
margin_right = 135.0
margin_bottom = 55.0
custom_constants/margin_right = 10

[node name="Prev_Button" type="TextureButton" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Prev_Next_M/Prev_Next_C/Prev_M"]
margin_right = 125.0
margin_bottom = 55.0
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 13 )

[node name="Prev" type="Label" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Prev_Next_M/Prev_Next_C/Prev_M/Prev_Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.5
margin_top = -26.5
margin_right = 63.5
margin_bottom = 22.5
custom_fonts/font = ExtResource( 30 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Previous"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next_M" type="MarginContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Prev_Next_M/Prev_Next_C"]
margin_left = 139.0
margin_right = 264.0
margin_bottom = 55.0

[node name="Next_Button" type="TextureButton" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Prev_Next_M/Prev_Next_C/Next_M"]
margin_right = 125.0
margin_bottom = 55.0
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 13 )

[node name="Label" type="Label" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Prev_Next_M/Prev_Next_C/Next_M/Next_Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.5
margin_top = -26.5
margin_right = 65.5
margin_bottom = 22.5
custom_fonts/font = ExtResource( 30 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Next"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Like_DisLike_M" type="MarginContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C"]
margin_left = 288.0
margin_right = 577.0
margin_bottom = 55.0

[node name="Like_DisLike_C" type="HBoxContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Like_DisLike_M"]
margin_right = 289.0
margin_bottom = 55.0

[node name="Like_M" type="MarginContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Like_DisLike_M/Like_DisLike_C"]
margin_right = 175.0
margin_bottom = 55.0
custom_constants/margin_right = 20
custom_constants/margin_left = 50

[node name="Like_C" type="HBoxContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Like_DisLike_M/Like_DisLike_C/Like_M"]
margin_left = 50.0
margin_right = 155.0
margin_bottom = 55.0

[node name="Like_Button" type="TextureButton" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Like_DisLike_M/Like_DisLike_C/Like_M/Like_C"]
margin_right = 53.0
margin_bottom = 55.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 19 )

[node name="Label" type="Label" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Like_DisLike_M/Like_DisLike_C/Like_M/Like_C"]
margin_left = 57.0
margin_top = 8.0
margin_right = 105.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.27451, 0.992157, 0.517647, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "127"

[node name="DisLike_M" type="MarginContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Like_DisLike_M/Like_DisLike_C"]
margin_left = 179.0
margin_right = 289.0
margin_bottom = 55.0
custom_constants/margin_left = 20

[node name="DisLike_C" type="HBoxContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Like_DisLike_M/Like_DisLike_C/DisLike_M"]
margin_left = 20.0
margin_right = 110.0
margin_bottom = 55.0

[node name="DisLike_Button" type="TextureButton" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Like_DisLike_M/Like_DisLike_C/DisLike_M/DisLike_C"]
margin_right = 54.0
margin_bottom = 55.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 21 )
texture_hover = ExtResource( 18 )

[node name="DisLike_L" type="Label" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Like_DisLike_M/Like_DisLike_C/DisLike_M/DisLike_C"]
margin_left = 58.0
margin_top = 8.0
margin_right = 90.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.909804, 0.541176, 0.270588, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "28"

[node name="Upload_Close_M" type="MarginContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C"]
margin_left = 581.0
margin_right = 935.0
margin_bottom = 55.0
custom_constants/margin_right = 20
custom_constants/margin_left = 70

[node name="Up_Cl_C" type="HBoxContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Upload_Close_M"]
margin_left = 70.0
margin_right = 334.0
margin_bottom = 55.0

[node name="Up_M" type="MarginContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Upload_Close_M/Up_Cl_C"]
margin_right = 135.0
margin_bottom = 55.0
custom_constants/margin_right = 10

[node name="Upload_Button" type="TextureButton" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Upload_Close_M/Up_Cl_C/Up_M"]
margin_right = 125.0
margin_bottom = 55.0
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 23 )

[node name="Upload" type="Label" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Upload_Close_M/Up_Cl_C/Up_M/Upload_Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.9142
margin_top = -27.5
margin_right = 62.0858
margin_bottom = 23.5
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 30 )
custom_colors/font_color = Color( 0.992157, 0.992157, 0.992157, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Upload"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Close_M" type="MarginContainer" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Upload_Close_M/Up_Cl_C"]
margin_left = 139.0
margin_right = 264.0
margin_bottom = 55.0

[node name="Close_Button" type="TextureButton" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Upload_Close_M/Up_Cl_C/Close_M"]
margin_right = 125.0
margin_bottom = 55.0
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 11 )

[node name="Close" type="Label" parent="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Upload_Close_M/Up_Cl_C/Close_M/Close_Button"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0281
margin_top = -28.4439
margin_right = 62.9719
margin_bottom = 21.5561
custom_fonts/font = ExtResource( 30 )
custom_colors/font_color = Color( 0.984314, 0.984314, 0.984314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Close"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Root/Outer_Rect/X_M/X_Button" to="Root" method="_on_X_Button_pressed"]
[connection signal="pressed" from="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Text_C/Button_M/Button_C/Block_M/Block_Button" to="Root" method="_on_Block_Button_pressed"]
[connection signal="pressed" from="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Text_C/Button_M/Button_C/Video_M/Video_Button" to="Root" method="_on_Video_Button_pressed"]
[connection signal="pressed" from="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Prev_Next_M/Prev_Next_C/Prev_M/Prev_Button" to="Root" method="_on_Prev_Button_pressed"]
[connection signal="pressed" from="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Prev_Next_M/Prev_Next_C/Next_M/Next_Button" to="Root" method="_on_Next_Button_pressed"]
[connection signal="pressed" from="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Like_DisLike_M/Like_DisLike_C/Like_M/Like_C/Like_Button" to="Root" method="_on_Like_Button_pressed"]
[connection signal="pressed" from="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Like_DisLike_M/Like_DisLike_C/DisLike_M/DisLike_C/DisLike_Button" to="Root" method="_on_DisLike_Button_pressed"]
[connection signal="pressed" from="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Upload_Close_M/Up_Cl_C/Up_M/Upload_Button" to="." method="_on_Upload_Button_pressed"]
[connection signal="pressed" from="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Upload_Close_M/Up_Cl_C/Up_M/Upload_Button" to="Root" method="_on_Upload_Button_pressed"]
[connection signal="pressed" from="Root/Outer_Rect/Inner_Rect/Inner_M/Body_C/Down_M/Down_C/Upload_Close_M/Up_Cl_C/Close_M/Close_Button" to="Root" method="_on_Close_Button_pressed"]
