tool
extends Control


func _on_X_Button_pressed():
	print("X Button pressed")


func _on_Block_Button_pressed():
	print("Blog Button pressed")


func _on_Video_Button_pressed():
	print("Video Button pressed")


func _on_Prev_Button_pressed():
	print("Prev Button pressed")


func _on_Next_Button_pressed():
	print("Next Button pressed")


func _on_Like_Button_pressed():
	print("Like Button pressed")


func _on_DisLike_Button_pressed():
	print("DisLike Button pressed")


func _on_Upload_Button_pressed():
	print("Upload Button pressed")


func _on_Close_Button_pressed():
	print("Close Button pressed")
